force-app/main/default/objects/Channel_Program_Member_settings__mdt/Channel_Program_Member_settings__mdt.object-meta.xml
<CustomObject>
    <label>Channel_Program_Member settings</label>
    <pluralLabel>Channel_Program_Member settings</pluralLabel>
</CustomObject>