force-app/main/default/objects/Channel_Program_Member_settings__mdt/fields/Channel_Program__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program__c</fullName>
    <label>Channel Program</label>
    <length>100</length>
    <type>Text</type>
</CustomField>