force-app/main/default/objects/Channel_Program_Member_settings__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries</label>
    <length>100</length>
    <type>Text</type>
</CustomField>