force-app/main/default/objects/Channel_Program_Member_settings__mdt/fields/Owner_Theater__c.field-meta.xml
<CustomField>
    <fullName>Owner_Theater__c</fullName>
    <label>Owner Theater</label>
    <length>100</length>
    <type>Text</type>
</CustomField>