force-app/main/default/objects/Channel_Program_Member_settings__mdt/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>