force-app/main/default/objects/Channel_Program_Member_settings__mdt/listViews/All_Members.listView-meta.xml
<ListView>
    <fullName>All_Members</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Channel_Program__c</columns>
    <columns>Level__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>Owner_Theater__c</columns>
    <columns>Countries__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Members</label>
</ListView>